syntax = "proto3";

option csharp_namespace = "StudentManagement.gRPC.Services";

package teacher;

service TeacherService {
  rpc GetTeacherList (GetTeacherListRequest) returns (GetTeacherListReply);
}

message GetTeacherListRequest {
  //
}

message TeacherInfo {
  int32 maGV = 1;
  string tenGV = 2;
  string ngaySinh = 3;
}

message GetTeacherListReply {
  repeated TeacherInfo teachers = 1;
}
